--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Beergame</string>
+    <string name="play">Play</string>
+    <string name="instructions">Instructions</string>
+    <string name="customize">Customize</string>
 </resources>
