--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="play">Play</string>
     <string name="instructions">Instructions</string>
     <string name="customize">Customize</string>
-    <string name="newCard">New Card</string>
+    <string name="newCard">Draw Card</string>
     <string name="instruktionerna">Här ska de komma fult med isntruktioner som ska lära alla små barn att dricka öl ute helvete
     och sen spy ner sig och sedan fortsätta dricka en helvetes massa öl</string>
 
